Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- CPSInstaller will now use CMFQuickInstaller to install products, if possible.
- box import cope with guard configuration
Bug fixes:
~~~~~~~~~~
- Boxes were not updated, even if they were not modified by users
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-